--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+images/flamingo.jpg
+images/lights.jpg
+images/tree.jpg
+images/sea.jpg
